--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-
 BOT_TOKEN=7291701095:AAFJ1MiBpJsaoOpQyq1awE1kVk8wx-k6jWU
 DATABASE_URL=sqlite+aiosqlite:///database.sqlite3
+ADMIN_IDS=8300618939,817411344,1097958911
